# uv-python-repo-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  README_zh.md  pyproject.toml
.github/: pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  release_request.md
.github/workflows/: auto-release.yaml  auto-tag-on-release.yaml  dev_deploy.yaml  lint_test.yaml  list_contributors.yaml  main-lint-test.yaml  pr_gate.yaml  prod_deploy.yaml  publish.yaml  publish.yaml.template  release-drafter.yml  release-on-pr.yaml  release.yaml  sync_dev.yaml
docs/: README.md  development-workflow.md  development-workflow.zh.md  getting-started.md  getting-started.zh.md  github-setup.md  github-setup.zh.md
docs/en/: features.md  getting-started.md  github-setup.md  release-workflow-improvements.md
docs/zh/: features.zh.md  getting-started.zh.md  github-setup.zh.md  release-workflow-improvements.zh.md
scripts/: check_commit_message.py  init.sh  init_linux.sh  manual_tag.sh  poe_action.py  pre-push.sh  prepare-tag.sh  tag.sh
src/uv_python_repo_template/: __init__.py  example.py
tests/: test_main.py
