[project]
name = "uv_python_repo_template"
version = "1.5.0"
description = "A Python project template using UV for project manager"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "jarlor", email = "jarlorzhang@outlook.com" }]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "poethepoet>=0.33.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "python-semantic-release>=9.21.0",
    "ruff>=0.9.5",
    "update-toml>=0.2.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

# Enable specific rule sets
lint.select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "PERF",   # perflint (performance)
]

# Ignore specific rules
lint.ignore = [
    "E501",   # line-too-long (handled by formatter)
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
]

# Allow autofix for all enabled rules
lint.fixable = ["ALL"]
lint.unfixable = []

# Exclude patterns
extend-exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint.isort]
known-first-party = ["uv_python_repo_template"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.10"
mypy_path = ["src"]
files = ["src"]

strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true

disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

check_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true

ignore_missing_imports = true

show_error_codes = true
show_column_numbers = true
pretty = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--verbose --color=yes"

[tool.poe.tasks]
format = "ruff format"

lint_ruff = "ruff check src/"
lint_mypy = "mypy --install-types --non-interactive"
lint = { sequence = ["lint_ruff", "lint_mypy"] }

test = "pytest"

smoke = { shell = "python -c 'import uv_python_repo_template as p; p.main()'" }

_tag_changelog = "semantic-release changelog"
_tag_version = "semantic-release version --no-push"
_tag_update_toml_version = { shell = "update-toml update --path project.version --value $(semantic-release version --print)" }

[tool.poe.tasks.tag]
shell = "bash scripts/tag.sh ${version}"
args = [{ name = "version", options = ["--version"], type = "string", default = "auto" }]
help = "Create version tag (auto: uv run poe tag, manual: uv run poe tag --version X.Y.Z)"

[tool.poe.tasks.init]
shell = "bash scripts/init.sh ${yes:+ -y}"
args = [{ name = "yes", options = ["-y", "--yes"], type = "boolean" }]

[semantic_release]
assets = ["pyproject.toml", "uv.lock"]

[semantic_release.remote]
ignore_token_for_push = true
