# ============================================================================
# Project Metadata
# ============================================================================

[project]
name = "uv_python_repo_template"
version = "1.6.0"
description = "A Python project template using UV for project manager"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "jarlor", email = "jarlorzhang@outlook.com" }]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "poethepoet>=0.33.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "python-semantic-release>=9.21.0",
    "ruff>=0.9.5",
    "update-toml>=0.2.1",
]

# ============================================================================
# Ruff Configuration (Linting & Formatting)
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

extend-exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]

ignore = [
    "E501",   # line-too-long (handled by formatter)
    "B008",   # function call in argument defaults (FastAPI Depends pattern)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["uv_python_repo_template"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

# ============================================================================
# Mypy Configuration (Type Checking)
# ============================================================================

[tool.mypy]
python_version = "3.10"
mypy_path = ["src"]
files = ["src"]

check_untyped_defs = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = false
warn_unreachable = true

disallow_untyped_defs = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

# ============================================================================
# Pytest Configuration (Testing)
# ============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--verbose --color=yes"

# ============================================================================
# Poe the Poet Tasks (Task Runner)
# ============================================================================

[tool.poe.tasks]
format = { cmd = "ruff format", help = "Format code with Ruff" }
format-check = { cmd = "ruff format --check", help = "Check code formatting" }

lint-ruff = { cmd = "ruff check --fix src/", help = "Lint and auto-fix with Ruff" }
lint-mypy = { cmd = "mypy --install-types --non-interactive", help = "Type check with mypy" }
lint = { sequence = ["lint-ruff", "lint-mypy"], help = "Run all linters" }

test = { cmd = "pytest", help = "Run tests with pytest" }

smoke = { shell = "python -c 'import uv_python_repo_template as p; p.main()'", help = "Run smoke test" }

[tool.poe.tasks.tag]
shell = "bash scripts/tag.sh ${version}"
args = [{ name = "version", options = ["--version"], type = "string", default = "auto" }]
help = "Prepare a release (auto: uv run poe tag, manual: uv run poe tag --version X.Y.Z)"

[tool.poe.tasks.init]
shell = "bash scripts/init.sh ${yes:+ -y}"
args = [{ name = "yes", options = ["-y", "--yes"], type = "boolean" }]
help = "Initialize project (first-time setup)"

# ============================================================================
# Semantic Release Configuration (Versioning & Changelog)
# ============================================================================

[tool.semantic_release]
assets = ["pyproject.toml", "uv.lock"]

[tool.semantic_release.changelog]
mode = "init"
exclude_commit_patterns = []

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.branches.main]
match = "master"
prerelease = false

[tool.semantic_release.branches.dev]
match = "dev"
prerelease = false

[tool.semantic_release.branches.release]
match = "release/.+"
prerelease = false

[tool.semantic_release.remote]
ignore_token_for_push = true
